--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitCareHub"
         tools:targetApi="31">
-        <activity
-            android:name=".BaseActivity"
-            android:exported="false" />
+
         <activity
             android:name=".ProfileActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ProfileSetupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".VerificationActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
+            android:screenOrientation="portrait"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +39,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
     </application>
 
